Creacion de la seccion Intro

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/intro.css">
     <link rel="stylesheet" href="./css/footer.css">
 
 </head>
@@ -28,6 +29,14 @@
             </nav>
         </header>
         <main>
+            <section id="intro" class="intro">
+                <div class="intro-texto">
+                    <h2>Diseñado Para La Educación</h2>
+                    <p>Promueve una excelente experiencia de aprendizaje, mejorando la calidad de los procesos de enseñanza</p>
+                </div>
+                <img src="./img/device.png" alt="">
+            </section>
+           
         </main>
         <footer class="footer">
             <div class="footer-i">
@@ -53,7 +62,7 @@
                     @2020
                 </spam>
             </div>
-        </footer>
+    </footer>
     </div>
     <script src="./js/main.js"></script>
 </body>
