updated pilars.css and index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/intro.css">
+    <link rel="stylesheet" href="./css/pilars.css">
     <link rel="stylesheet" href="./css/footer.css">
 
 </head>
@@ -36,7 +37,32 @@
                 </div>
                 <img src="./img/device.png" alt="">
             </section>
-           
+            <section id="pilars" class="pilars">
+                <div class="pilars-texto">
+                    <h2>Taller Y Tutorías En Línea</h2>
+                    <p>Llegó al mercado una de las plataformas más completas
+                        enfocada en el proceso de enseñanza online.</p>
+                    <p>TPC te garantiza cumplir con los siguientes pilares: </p>
+                </div>
+                <div class="pilars-cards">
+                    <div class="pilars-card">
+                        <img class="pilars-card-img" src="./img/logo-2.png" alt="">
+                        <h3 class="pilars-card-h3">Rapidez</h3>
+                        <p class="pilars-card-p">Brindamos un proceso de reserva integrado y simplificado</p>
+                    </div>
+                    <div class="pilars-card">
+                        <img class="pilars-card-img" src="./img/logo-1.png" alt="">
+                        <h3 class="pilars-card-h3">Accesibilidad</h3>
+                        <p class="pilars-card-p">Disponible en los sistemas operativos Windows, Android y IOS</p>
+                    </div>
+                    <div class="pilars-card">
+                        <img class="pilars-card-img" src="./img/logo.png" alt="">
+                        <h3 class="pilars-card-h3">Simplicidad</h3>
+                        <p class="pilars-card-p">Interfaz intuitiva que facilita la interacción con todos los usuarios involucrados</p>
+                    </div>
+                </div>
+            </section>
+            
         </main>
         <footer class="footer">
             <div class="footer-i">
