--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/intro.css">
     <link rel="stylesheet" href="./css/pilars.css">
+    <link rel="stylesheet" href="./css/functions.css">
     <link rel="stylesheet" href="./css/footer.css">
 
 </head>
@@ -62,7 +63,51 @@
                     </div>
                 </div>
             </section>
-            
+            <section id="functions" class="functions">
+                <div class="functions-text">
+                    <h2>¿Por qué trabajar con TPC?</h2>
+                    <p>Nuevas funcionalidades orientadas al buen manejo de la información</p>
+                </div>
+                <div class="functions-cards">
+                    <div class="functions-card">
+                        <div class="card-img-1">
+                            <img class="functions-card-img" src="./img/Group%20105.png" alt="">
+                        </div>
+                        <div class="functions-card-text">
+                            <h3 class="functions-card-h3">Datos reales</h3>
+                            <p class="functions-card-p">De la demanda y oferta de los cursos</p>
+                        </div>
+                    </div>
+                    <div class="functions-card">
+                        <div class="card-img-2">
+                            <img class="functions-card-img" src="./img/Group%20105_2.png" alt="">
+                        </div>
+                        <div class="functions-card-text">
+                            <h3 class="functions-card-h3">Cálculo</h3>
+                            <p class="functions-card-p">De la eficiencia de los servicios de tutorías y talleres</p>
+                        </div>
+
+                    </div>
+                    <div class="functions-card">
+                        <div class="card-img-3">
+                            <img class="functions-card-img" src="./img/Group%20105_3.png" alt="">
+                        </div>
+                        <div class="functions-card-text">
+                            <h3 class="functions-card-h3">Seguimiento</h3>
+                            <p class="functions-card-p">Del desempeño de los tutores a cargo de tutorías y talleres</p>
+                        </div>
+                    </div>
+                    <div class="functions-card">
+                        <div class="card-img-4">
+                            <img class="functions-card-img" src="./img/Group%20105_4.png" alt="">
+                        </div>
+                        <div class="functions-card-text">
+                            <h3 class="functions-card-h3">Reducción</h3>
+                            <p class="functions-card-p">En el tiempo de respuesta de la actualización de datos</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer-i">
