Plan section OK

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/intro.css">
     <link rel="stylesheet" href="./css/pilars.css">
     <link rel="stylesheet" href="./css/functions.css">
+    <link rel="stylesheet" href="./css/plan.css">
     <link rel="stylesheet" href="./css/footer.css">
 
 </head>
@@ -105,6 +106,40 @@
                             <h3 class="functions-card-h3">Reducción</h3>
                             <p class="functions-card-p">En el tiempo de respuesta de la actualización de datos</p>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section id="plan" class="plan">
+                <div class="plan-text">
+                    <h2>Escoje un plan</h2>
+                    <p>Encuentre la solución adecuada a sus necesidades.</p>
+                </div>
+                <div class="plan-cards">
+                    <div class="plan-card">
+                        <h3 class="plan-card-h3">Basic</h3>
+                        <span class="plan-card-span">Gratuito</span>
+                        <ul class="plan-card-ul">
+                            <li>✓ Creación, actualización y seguimiento de las reservas.</li>
+                            <li>✓ Acesso a videoconferencias</li>
+                            <li>✓ Proceso automatico de toma de asistencia</li>
+                            <li>Entre más funcionalidades básicas</li>
+                        </ul>
+                        <span class="plan-card-button">
+                        Más informacion
+                    </span>
+                    </div>
+                    <div class="plan-card">
+                        <h3 class="plan-card-h3">Pro</h3>
+                        <span class="plan-card-span">Ilimitado</span>
+                        <ul class="plan-card-ul">
+                            <li>✓ Funcionalidades básicas incluidas.</li>
+                            <li>✓ Seguimiento del rendimiento de los docentes</li>
+                            <li>✓ Información estadistica relacionada a una materia</li>
+                            <li>Entre más funcionalidades avanzadas</li>
+                        </ul>
+                        <span class="plan-card-button">
+                        Más informacion
+                    </span>
                     </div>
                 </div>
             </section>
