add: video links

--- a/index.html
+++ b/index.html
@@ -143,6 +143,21 @@
                     </div>
                 </div>
             </section>
+
+            <section id="product" class="intro">
+                <div class="intro-texto">
+                    <h2>About de Product</h2>
+                    <p></p>
+                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/4rh83Qw8_ZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+            <section id="team" class="intro">
+                <div class="intro-texto">
+                    <h2>About de Team</h2>
+                    <p></p>
+                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kjFbjDQqL7Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer-i">
