add:Description in videos

--- a/index.html
+++ b/index.html
@@ -111,34 +111,34 @@
             </section>
             <section id="plan" class="plan">
                 <div class="plan-text">
-                    <h2>Escoje un plan</h2>
-                    <p>Encuentre la solución adecuada a sus necesidades.</p>
+                    <h2>Prueba TPC</h2>
+                    <p>Descubra lo que TPC tiene para ofrecerle probandolo</p>
                 </div>
                 <div class="plan-cards">
                     <div class="plan-card">
-                        <h3 class="plan-card-h3">Basic</h3>
-                        <span class="plan-card-span">Gratuito</span>
+                        <h3 class="plan-card-h3">Demo</h3>
+                        <span class="plan-card-span">Personalizado</span>
                         <ul class="plan-card-ul">
-                            <li>✓ Creación, actualización y seguimiento de las reservas.</li>
-                            <li>✓ Acesso a videoconferencias</li>
-                            <li>✓ Proceso automatico de toma de asistencia</li>
-                            <li>Entre más funcionalidades básicas</li>
+                            <li>Reciba una demostración adaptada a sus necesidades.</li>
+                            <li>Uno de nuestros colaboradores será el encargado de</li>
+                            <li>explicarle a detalle todas las funcionalidades que</li>
+                            <li>TPC tiene para usted.</li>
                         </ul>
                         <span class="plan-card-button">
-                        Más informacion
+                        Solicitar un demo
                     </span>
                     </div>
                     <div class="plan-card">
-                        <h3 class="plan-card-h3">Pro</h3>
-                        <span class="plan-card-span">Ilimitado</span>
+                        <h3 class="plan-card-h3">Prueba</h3>
+                        <span class="plan-card-span">TPC</span>
                         <ul class="plan-card-ul">
-                            <li>✓ Funcionalidades básicas incluidas.</li>
-                            <li>✓ Seguimiento del rendimiento de los docentes</li>
-                            <li>✓ Información estadistica relacionada a una materia</li>
+                            <li>Si ya esta listo para probar nuestra plataforma con sus educadores,</li>
+                            <li>solo tiene que solicitarlo. Esta presentación incluye el acesso</li>
+                            <li>ilimitado a todas las funcionalidades de la plataforma.</li>
                             <li>Entre más funcionalidades avanzadas</li>
                         </ul>
                         <span class="plan-card-button">
-                        Más informacion
+                        Solicitar una prueba
                     </span>
                     </div>
                 </div>
@@ -147,14 +147,14 @@
             <section id="product" class="intro">
                 <div class="intro-texto">
                     <h2>About de Product</h2>
-                    <p></p>
+                    <p>En este video se brinda mas información sobre TPC</p>
                 </div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/4rh83Qw8_ZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
             <section id="team" class="intro">
                 <div class="intro-texto">
                     <h2>About de Team</h2>
-                    <p></p>
+                    <p>En este video se muestra quiénes son parte del equipo de TPC</p>
                 </div>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/kjFbjDQqL7Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
